--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,11 @@
 page-about {
 
 }
+
+.masters {
+  background-image: url('../../assets/Citigold.png');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
